overflow-x on hp fix

--- a/css/main.css
+++ b/css/main.css
@@ -121,6 +121,10 @@ footer a {
   font-size: 1.125rem;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 header {
   position: relative;
   z-index: 1111;
@@ -207,7 +211,6 @@ footer .footer-legal-and-contact {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
   width: 100%;
 }
 
@@ -241,7 +244,7 @@ section {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 6666;
   display: flex;
