--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,6 +2,10 @@
 @use "../abstracts/variables" as *;
 @use "../abstracts/mixins" as *;
 
+body {
+  overflow-x: hidden;
+}
+
 // COMPONENTS
 header {
   @include header;
@@ -14,7 +18,6 @@ footer {
 // GENERAL LAYOUT
 .page-container-HP {
   @include flex-center;
-  overflow: hidden;
   width: 100%;
 }
 
@@ -51,7 +54,7 @@ section {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   z-index: 6666;
   @include flex-center;
